# py-dev-env-practice

./: .gitignore  README.md  config.yml  pyproject.toml  test_array.py
data/: fixtures.py  services.csv  services.db
py_dev_env_practice/: __main__.py  containers.py  entities.py  finders.py  listers.py  main.py
tests/: test_py_dev_env_practice.py
