[tool.poetry]
name = "py-dev-env-practice"
version = "0.1.1"
description = ""
authors = ["1eedaegon <d8726243@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run = "py_dev_env_practice.main:main"