[tool.poetry]
name = "py-dev-env-practice"
version = "0.1.1"
description = ""
authors = ["1eedaegon <d8726243@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dependency-injector = "^4.39.1"
PyYAML = "^6.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "py_dev_env_practice.__main__:main"
fixture = "data.fixtures:main"
test = "tests.test_py_dev_env_practice"